--- a/batch-service.properties
+++ b/batch-service.properties
@@ -1,7 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/training
+spring.datasource.url=jdbc:mysql://localhost:3306/learndb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.database-platform=org.hibernate.dialect.MySQL5Dialect  
 spring.jpa.hibernate.show-sql=true
-message=welcome
