--- a/batch-service.properties
+++ b/batch-service.properties
@@ -1,6 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/learndb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/learndb
+
+#dialect to inform hibernate which database is used
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.database-platform=org.hibernate.dialect.MySQL5Dialect  
-spring.jpa.hibernate.show-sql=true
+#create for first time
